--- a/menu.html
+++ b/menu.html
@@ -78,7 +78,7 @@
   </div>
 
   <button onclick="location.href='solicitar.html'">Solicitar Materiales</button>
-  <button onclick="location.href='pendientes.html'">Entregas Pendientes</button>
+  <button onclick="location.href='entregar.html'">Entregas Pendientes</button>
   <button onclick="location.href='entregadas.html'">Historial de Entregas</button>
 
   <button class="logout" onclick="logout()">Cerrar Sesión</button>
